perintah.txt
Untuk di android/generate_project.ps1, perbaiki error-error ini: 

============================================
  Building APK and AAB...
============================================

To honour the JVM settings for this build a single-use Daemon process will be forked. See https://docs.gradle.org/8.0/userguide/gradle_daemon.html#sec:disabling_the_daemon.
Daemon will be stopped at the end of the build 

> Task :app:processReleaseMainManifest
D:\ZEN-PROJECT\andro-2026\android\app\src\main\AndroidManifest.xml:8:5-95 Warning:
        uses-permission#android.permission.ACCESS_WIFI_STATE was tagged at AndroidManifest.xml:8 to remove other declarations but no other declaration present

> Task :app:processDebugMainManifest
D:\ZEN-PROJECT\andro-2026\android\app\src\main\AndroidManifest.xml:8:5-95 Warning:
        uses-permission#android.permission.ACCESS_WIFI_STATE was tagged at AndroidManifest.xml:8 to remove other declarations but no other declaration present

> Task :app:compileReleaseJavaWithJavac FAILED
D:\ZEN-PROJECT\andro-2026\android\app\src\main\java\com\example\helloworld\MainActivity.java:198: error: package GeolocationPermissions does not exist
                    GeolocationPermissions.Callback callback) {
                                          ^
Note: D:\ZEN-PROJECT\andro-2026\android\app\src\main\java\com\example\helloworld\MainActivity.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
1 error

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileReleaseJavaWithJavac'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 3m 29s
49 actionable tasks: 49 executed
0 was unexpected at this time.

Oh iya, aku mau fitur Geolocation aktifkan lagi, entah itu ada ads maupun tidak